--- a/html/css/style.css
+++ b/html/css/style.css
@@ -72,7 +72,7 @@ body{
 	left: 10px;
 	right: 10px;	
 	z-index: 4;
-	max-width: 400px;
+	max-width: 768px;
 	opacity: 0;
 	display: none;
 	 -webkit-user-select: none; 
@@ -165,7 +165,7 @@ body{
 }
 #btn_back{
 	position: absolute;
-	width: 60px;
+	width: 60px;''
 	height: 60px;
 	top: 0px;
 	left: 0px;
@@ -1155,7 +1155,7 @@ and (min-width : 768px) {
 		padding-bottom: 10px;
 		margin-top: 10px;
 		position: relative;
-		max-width: 400px;	
+		max-width: 400px!important;	
 	}
 	#btn_wrapper{
 		max-width: 400px;
