--- a/html/css/style.css
+++ b/html/css/style.css
@@ -29,6 +29,15 @@ body{
 	font-family: gill;
 	font-size: 100%;
 }
+#transparentlayer{
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	left: 0px;
+	bottom: 0px;
+	z-index: 1000000000000000;	
+	display: block;
+}
 #content_outer_wrapper{
 	height: 100%;
 }
@@ -49,10 +58,10 @@ body{
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	width: 50px;
-	height: 50px;
-	margin-left: -25px;
-	margin-top: -25px;
+	width: 32px;
+	height: 32px;
+	margin-left: -16px;
+	margin-top: -16px;
 	background: url('../img/ajax-loader.gif') no-repeat center;	
 	z-index: 10000;
 	opacity: 0;
