update in style

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -933,6 +933,20 @@ body.philips .slider_value {
 	color: #0b5ed7;
 }
 
+input[type='range']::-moz-slider-thumb {  
+    -webkit-appearance: none;
+    width: 24px;
+    height: 60px;
+    border: 0px solid transparent;
+    background-color: transparent;
+
+    background-image: url('../img/slider_thumb.svg');
+    background-repeat: no-repeat;
+	/*background-size: auto 100%!important;*/
+	background-position: 50% 50%;
+  	z-index: 10000;
+}
+
 input[type='range']::-webkit-slider-thumb {  
     -webkit-appearance: none;
     width: 24px;
