--- a/html/css/style.css
+++ b/html/css/style.css
@@ -84,10 +84,26 @@ body{
 	max-width: 768px;
 	opacity: 0;
 	display: none;
-	 -webkit-user-select: none; 
-	 -webkit-touch-callout: none; 	
+	-webkit-user-select: none; 
+	-moz-user-select: none;    
+  	-ms-user-select: none;      
+  	user-select: none;	
 	/*transition: all 0.4s ease-out, height 0.4s ease-out 0.4s;
 	-webkit-transition: all 0.4s ease-out, height 0.4s ease-out 0.4s;		*/
+}
+.panel.modal.fullscreen{
+	max-width: 100%!important;
+	background: rgba(0,0,0,0.5);
+	left: 0px;
+	right: 0px;
+	top: 0px;
+	bottom: 0px;
+}
+.panel.modal.fullscreen .modal_content{
+	max-width: 400px;
+	left: 50%;
+	margin-left: -200px;
+	top: 0px!important;
 }
 .btn{
 	float: left;
@@ -182,6 +198,88 @@ body{
 	background-size: auto 55%;
 	display: none;
 }
+.intro{
+	position: absolute;
+	border-left: 2px solid #fff;
+	padding-left: 10px;
+}
+.intro h4{
+	color: #fff;
+	font-size: 12px;
+}
+.intro h4 span{
+	font-size: 15px;
+}
+#current_filter{
+	top: 50px;
+	left: 50%;
+	margin-left: -50px;
+}
+#drag_drop{
+	top: 35%;
+	left: 10%;	
+}
+#zoom{
+	top: 60%;
+	left: 60%;		
+}
+#find_favourites{
+	bottom: 60px;
+	left: 0%;		
+}
+#different_dataview{
+	bottom: 60px;
+	left: 25%;		
+}
+#more_information{
+	bottom: 60px;
+	left: 50%;		
+}
+#leave_app{
+	bottom: 60px;
+	right: 0%;		
+}
+
+
+
+#current_status{
+	left:10%;
+	top: 10%;
+}
+#trend_line{
+	left:10%;
+	top: 50%;	
+}
+#year_end{
+	left:10%;
+	bottom: 60px;	
+}
+#save_favourite{
+	right: 0%;
+	top: 0%;	
+}
+
+
+
+#cancel{
+	left:10%;
+	top: 3%;	
+}
+#select_geo{
+	left:10px;
+	top: 10%;
+}
+#confirm_selection{
+	right: 0%;
+	top: 3%;	
+}
+#expand_tree{
+	left:10px;
+	top: 25%;	
+}
+
+
+
 
 .hide{
 	display: none;
@@ -528,7 +626,9 @@ span{
 	top: 50%;
 	margin-top: -25%;
 	-webkit-user-select: none; 
- 	-webkit-touch-callout: none; 
+	-moz-user-select: none;    
+  	-ms-user-select: none;      
+  	user-select: none;	
 }
 #simulation_wrapper h3{
 	height: 20%;
@@ -946,6 +1046,19 @@ input[type='range']::-webkit-slider-thumb {
 	background-position: 50% 50%;
   	z-index: 10000;
 }
+input[type='range']::-moz-slider-thumb {  
+    -webkit-appearance: none;
+    width: 24px;
+    height: 60px;
+    border: 0px solid transparent;
+    background-color: transparent;
+
+    background-image: url('../img/slider_thumb.svg');
+    background-repeat: no-repeat;
+	/*background-size: auto 100%!important;*/
+	background-position: 50% 50%;
+  	z-index: 10000;
+}
 input#slidersales, input#slidergreensales{
 	margin-left: 0px!important;
 }
@@ -1110,6 +1223,37 @@ and (orientation : portrait) {
 @media only screen 
 and (min-width : 768px) {
 /* Styles */
+	#current_status {
+		left: 10px;
+		top: 250px;
+	}
+	#trend_line{
+		left:33%;
+		top: 250px;	
+	}
+	#year_end{
+		left:66%;
+		top: 250px;	
+		bottom: auto;
+	}
+	#save_favourite{
+		right: 10px;
+		top: 10px;	
+	}
+	
+	.region_info .modal_content{
+		max-width: 100%!important;
+		left: 0px!important;
+		margin-left: 0px!important;
+	}
+	.panel.modal.fullscreen{
+		margin-top: 0px;
+		left: 0px;
+		right: 0px;
+		top: 0px;
+		bottom: 0px;
+		height: 100%!important;
+	}
 	#region_info{
 		height: 100%;
 		width: 33%;
@@ -1163,7 +1307,6 @@ and (min-width : 768px) {
 		height: 95%;
 		padding-bottom: 10px;
 		margin-top: 10px;
-		position: relative;
 		max-width: 400px!important;	
 	}
 	#btn_wrapper{
