--- a/html/css/style.css
+++ b/html/css/style.css
@@ -223,19 +223,27 @@ body{
 	top: 60%;
 	left: 60%;		
 }
-#find_favourites{
+#find_favourites
+{
+	max-width: 20%;
 	bottom: 60px;
 	left: 0%;		
 }
-#different_dataview{
+#different_dataview
+{
+	max-width: 25%;
 	bottom: 60px;
 	left: 25%;		
 }
-#more_information{
+#more_information
+{
+	max-width: 25%;
 	bottom: 60px;
 	left: 50%;		
 }
-#leave_app{
+#leave_app
+{
+	max-width: 25%;
 	bottom: 60px;
 	left: 75%;		
 }
@@ -632,6 +640,7 @@ span{
 }
 #simulation_wrapper h1
 {
+	font-weight: normal;
 	margin: 12px 0 0 0;
 	lin-height: 30px;
 	font-size: 20px;
@@ -1245,15 +1254,21 @@ and (orientation : portrait) {
 @media only screen 
 and (min-width : 768px) {
 /* Styles */
-	#current_status {
-		left: 10px;
+	#current_status 
+	{
+		max-width: 30%;
+		left: 5px;
 		top: 30%;
 	}
-	#trend_line{
-		left:33%;
+	#trend_line
+	{
+		max-width: 30%;
+		left: 33%;
 		top: 30%;	
 	}
-	#year_end{
+	#year_end
+	{
+		max-width: 30%;
 		left:66%;
 		top: 30%;	
 		bottom: auto;
@@ -1331,7 +1346,7 @@ and (min-width : 768px) {
 	 	color: #000!important;
 	}
 	.modal{
-		margin-left: -200px;
+		margin: 0 0 0 -200px!important;
 		left: 50%!important;
 		height: 95%;
 		padding-bottom: 10px;
@@ -1340,6 +1355,7 @@ and (min-width : 768px) {
 	}
 	.modal.fullscreen
 	{
+		margin: 0px!important;
 		left: 0%!important;
 		margin-left: 0px;
 	}
@@ -2560,7 +2576,6 @@ and (min-width : 768px) {
 		height: 95%;
 		padding-bottom: 10px;
 		margin-top: 10px;
-		position: relative;
 		max-width: 400px!important;	
 	}
 	#btn_wrapper{
