--- a/html/css/style.css
+++ b/html/css/style.css
@@ -907,24 +907,7 @@ li#philips.selected{
 
 
 /* Lighting*/
-body.PD0100 input[type='range']{
-	border: 1px solid #7dba00;
-	background: #7dba00;
-}
-/* CL */
-body.PD0200 input[type='range'] {
-	border: 1px solid #68049c;
-	background: #68049c;
-}
-/* Healthcare */
-body.PD0900 input[type='range'] {
-	border: 1px solid #2badb5;
-	background: #2badb5;
-}
-body.philips input[type='range'] {
-	border: 1px solid #0b5ed7;
-	background: #0b5ed7;
-}
+
 
 body.PD0100 #region_info, body.PD0100 #region_history, body.PD0100 #show_current, body.PD0100 #arrow_down {
 	background: #7dba00;
@@ -1032,24 +1015,7 @@ body.philips .nr_label, body.philips #lives_improved_percentage_sub tspan, body.
 	fill: #fff;
 }
 
-input[type='range'] {
-    -webkit-appearance: none;
-    width: 83%;
-    height: 1px;
-    padding: 0px;
-    margin: 0px;
-    -webkit-border-radius: 15px;
-    border-radius: 15px;
-    border: 1px solid #007aa7;
-    background-image: -webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #00495d),
-        color-stop(1, #00495d)
-    );
-    z-index: 10000;
-}
+
 
 body.PD0100 .slider_value{
 	color: #7dba00;
@@ -1065,32 +1031,6 @@ body.philips .slider_value {
 }
 
 
-input[type='range']::-webkit-slider-thumb {  
-    -webkit-appearance: none;
-    width: 24px;
-    height: 60px;
-    border: 0px solid transparent;
-    background-color: transparent;
-
-    background-image: url('../img/slider_thumb.svg');
-    background-repeat: no-repeat;
-	/*background-size: auto 100%!important;*/
-	background-position: 50% 50%;
-  	z-index: 10000;
-}
-input[type='range']::-moz-range-thumb {  
-    -webkit-appearance: none;
-    width: 24px;
-    height: 60px;
-    border: 0px solid transparent;
-    background-color: transparent;
-
-    background-image: url('../img/slider_thumb.svg');
-    background-repeat: no-repeat;
-	/*background-size: auto 100%!important;*/
-	background-position: 50% 50%;
-  	z-index: 10000;
-}
 input#slidersales, input#slidergreensales{
 	margin-left: 0px!important;
 }
@@ -2172,25 +2112,7 @@ li#philips.selected{
 }
 
 
-/* Lighting*/
-body.PD0100 input[type='range']{
-	border: 1px solid #7dba00;
-	background: #7dba00;
-}
-/* CL */
-body.PD0200 input[type='range'] {
-	border: 1px solid #68049c;
-	background: #68049c;
-}
-/* Healthcare */
-body.PD0900 input[type='range'] {
-	border: 1px solid #2badb5;
-	background: #2badb5;
-}
-body.philips input[type='range'] {
-	border: 1px solid #0b5ed7;
-	background: #0b5ed7;
-}
+
 
 body.PD0100 #region_info, body.PD0100 #region_history, body.PD0100 #show_current, body.PD0100 #arrow_down {
 	background: #7dba00;
@@ -2298,6 +2220,70 @@ body.philips .nr_label, body.philips #lives_improved_percentage_sub tspan, body.
 	fill: #fff;
 }
 
+
+
+body.PD0100 .slider_value, body.PD0100 #simulation_wrapper h1{
+	color: #7dba00;
+}
+body.PD0200 .slider_value, body.PD0200 #simulation_wrapper h1 {
+	color: #68049c;
+}
+body.PD0900 .slider_value, body.PD0900 #simulation_wrapper h1 {
+	color: #2badb5;
+}
+body.philips .slider_value, body.philips #simulation_wrapper h1 {
+	color: #0b5ed7;
+}
+
+
+
+/* Lighting*/
+body.PD0100 input[type='range']{
+	border: 1px solid #7dba00;
+	background: #7dba00;
+}
+/* CL */
+body.PD0200 input[type='range'] {
+	border: 1px solid #68049c;
+	background: #68049c;
+}
+/* Healthcare */
+body.PD0900 input[type='range'] {
+	border: 1px solid #2badb5;
+	background: #2badb5;
+}
+body.philips input[type='range'] {
+	border: 1px solid #0b5ed7;
+	background: #0b5ed7;
+}
+
+input[type='range']::-webkit-slider-thumb {  
+    -webkit-appearance: none;
+    width: 24px;
+    height: 60px;
+    border: 0px solid transparent;
+    background-color: transparent;
+
+    background-image: url('../img/slider_thumb.svg');
+    background-repeat: no-repeat;
+	/*background-size: auto 100%!important;*/
+	background-position: 50% 50%;
+  	z-index: 10000;
+}
+input[type='range']::-moz-range-thumb {  
+    -webkit-appearance: none;
+    width: 24px;
+    height: 60px;
+    border: 0px solid transparent;
+    background-color: transparent;
+
+    background-image: url('../img/slider_thumb.svg');
+    background-repeat: no-repeat;
+	/*background-size: auto 100%!important;*/
+	background-position: 50% 50%;
+  	z-index: 10000;
+}
+
 input[type='range'] {
     -webkit-appearance: none;
     width: 83%;
@@ -2317,18 +2303,6 @@ input[type='range'] {
     z-index: 10000;
 }
 
-body.PD0100 .slider_value, body.PD0100 #simulation_wrapper h1{
-	color: #7dba00;
-}
-body.PD0200 .slider_value, body.PD0200 #simulation_wrapper h1 {
-	color: #68049c;
-}
-body.PD0900 .slider_value, body.PD0900 #simulation_wrapper h1 {
-	color: #2badb5;
-}
-body.philips .slider_value, body.philips #simulation_wrapper h1 {
-	color: #0b5ed7;
-}
 
 input[type='range']::-moz-range-thumb {  
     -webkit-appearance: none;
@@ -2343,6 +2317,9 @@ input[type='range']::-moz-range-thumb {
 	background-position: 50% 50%;
   	z-index: 10000;
 }
+
+/* ::-moz-range-track */
+
 ::-ms-thumb  {  
     -webkit-appearance: none;
     width: 24px;
@@ -2369,6 +2346,17 @@ input[type='range']::-webkit-slider-thumb  {
 	background-position: 50% 50%;
   	z-index: 10000;
 }
+input[type='range'], 
+input[type='range']:focus, 
+input[type='range']:active, 
+input[type='range']::-moz-focus-inner, 
+input[type='range']:-moz-focusring {
+	border: 1px solid red;
+	outline: none;
+	position: relative;
+	-moz-transform: translateY(-10em);
+}
+
 input#slidersales, input#slidergreensales{
 	margin-left: 0px!important;
 }
