- new method for loading config.js, - fixed slider in healthcare, - new method for loading external urls in app (requires CORDOVA InApp browser)

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -31,6 +31,15 @@ body {
 }
 */
 
+.mimiclink{
+	display: inline;
+	color: rgb(0, 0, 238);
+	cursor: pointer;
+}
+.mimiclink:hover{
+	text-decoration: underline;
+}
+
 textarea:focus, input:focus{
     outline: 0;
 }
