--- a/html/css/style.css
+++ b/html/css/style.css
@@ -674,9 +674,13 @@ body.PD0900 #simulation_wrapper h1 {
 	opacity: 0;
 }
 
-#login_panel span {
+#login_panel .text {
 	font-size: 12px;
 	padding-bottom: 10px;
+}
+
+#login_panel .text.emphasis {
+	font-weight: bold;
 }
 
 #login {
