--- a/html/css/style.css
+++ b/html/css/style.css
@@ -994,6 +994,10 @@ input[type=range] {
   z-index: 10000;
 }
 
+input[type=range]::-moz-focus-outer {
+  border: 0;
+}
+
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 24px;
