--- a/html/css/style.less
+++ b/html/css/style.less
@@ -2,34 +2,39 @@
   Variables
 */
 // Philips Group
-@philips-dark: #022a64;
-@philips-medium: #0b5ed7;
-@philips-light: #4286ea;
+@philips-dark: #002E6C;
+@philips-medium: #0E6EB3;
+@philips-light: #D2E9FF;
 
 // Diagnosos and Treatment
-@dhs001-dark: #093825;
-@dhs001-medium: #4B801A;
-@dhs001-light: #DAE95B;
+@dhs001-dark: #2E0740;
+@dhs001-medium: #570E60;
+@dhs001-light: #E1DDFA;
 
 // Connected Care and Health Informatics
-@dhs003-dark: #521536;
-@dhs003-medium: #E6285F;
-@dhs003-light: #E4B8C0;
+@dhs003-dark: #094B89;
+@dhs003-medium: #6B91D5;
+@dhs003-light: #CEDFFF;
 
 // Lighting solutions
-@pd0100-dark: #446500;
-@pd0100-medium: #7dba00;
-@pd0100-light: #a2dc2b;
+@pd0100-dark: #EE7706;
+@pd0100-medium: #F2A41C;
+@pd0100-light: #F3DDC2;
 
 // Personal Health (previously known as Consumer Lifestyle)
-@pd0200-dark: #27003c;
-@pd0200-medium: #68049c;
-@pd0200-light: #9b4bc5;
+@pd0200-dark: #123727;
+@pd0200-medium: #3A8D3F;
+@pd0200-light: #E0FEE4;
 
-// Healthcare
-@pd0900-dark: #124a4d;
-@pd0900-medium: #2badb5;
-@pd0900-light: #64d3da;
+// Healthsystems (to be removed)
+@pd0900-dark: #074178;
+@pd0900-medium: #0E6EB3;
+@pd0900-light: #B7D9E3;
+
+// Royal Philips (NEW)
+@royalphilips-dark: #002E6C;
+@royalphilips-medium: #0E6EB3;
+@royalphilips-light: #D2E9FF;
 
 /*
   Rules
