Updated the light color for "Personal Health"

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -832,7 +832,7 @@ body.PD0200 #arrow_down {
   background: #3a8d3f;
 }
 body.PD0200 #arc_path {
-  stroke: #e0fee4;
+  stroke: #b5dfb7;
 }
 body.PD0200 #arc_path_left {
   stroke: #123727;
