--- a/html/css/style.less
+++ b/html/css/style.less
@@ -24,7 +24,7 @@
 // Personal Health (previously known as Consumer Lifestyle)
 @pd0200-dark: #123727;
 @pd0200-medium: #3A8D3F;
-@pd0200-light: #E0FEE4;
+@pd0200-light: #B5DFB7;
 
 // Healthsystems (to be removed)
 @pd0900-dark: #074178;
