--- a/html/css/style.less
+++ b/html/css/style.less
@@ -1354,7 +1354,8 @@ div#explain_panel{
 g#svgcontentwrapper {
   -webkit-transform: translateZ();
 
-  path.jvectormap-region {
+  path.jvectormap-region,
+  g {
     cursor:pointer;
   }
 }
