--- a/html/css/style.less
+++ b/html/css/style.less
@@ -252,6 +252,19 @@ input:focus {
   z-index: 2000;
 }
 
+/* marking the public sites */
+body.devpublic,
+body.prodpublic{
+  #menu_bar,
+  #title_bar,
+  #menu_bar .btn,
+  #title_bar .btn
+   {
+    background: @philips-medium;
+  }
+}
+
+
 #btn_back {
   position: absolute;
   width: 60px;
